get ready for deprecation of simple newInstance