@@ -73,34 +73,34 @@ import processing.opengl.*;
 
 /**
  * Base class for all sketches that use processing.core.
- * <p/>
+ * <p>
  * The <A HREF="https://github.com/processing/processing/wiki/Window-Size-and-Full-Screen">
  * Window Size and Full Screen</A> page on the Wiki has useful information
  * about sizing, multiple displays, full screen, etc.
- * <p/>
+ * <p>
  * Processing uses active mode rendering. All animation tasks happen on the
  * "Processing Animation Thread". The setup() and draw() methods are handled
  * by that thread, and events (like mouse movement and key presses, which are
  * fired by the event dispatch thread or EDT) are queued to be safely handled
  * at the end of draw().
- * <p/>
+ * <p>
  * Starting with 3.0a6, blit operations are on the EDT, so as not to cause
  * GUI problems with Swing and AWT. In the case of the default renderer, the
  * sketch renders to an offscreen image, then the EDT is asked to bring that
  * image to the screen.
- * <p/>
+ * <p>
  * For code that needs to run on the EDT, use EventQueue.invokeLater(). When
  * doing so, be careful to synchronize between that code and the Processing
  * animation thread. That is, you can't call Processing methods from the EDT
  * or at any random time from another thread. Use of a callback function or
  * the registerXxx() methods in PApplet can help ensure that your code doesn't
  * do something naughty.
- * <p/>
+ * <p>
  * As of Processing 3.0, we have removed Applet as the base class for PApplet.
  * This means that we can remove lots of legacy code, however one downside is
  * that it's no longer possible (without extra code) to embed a PApplet into
  * another Java application.
- * <p/>
+ * <p>
  * As of Processing 3.0, we have discontinued support for versions of Java
  * prior to 1.8. We don't have enough people to support it, and for a
  * project of our (tiny) size, we should be focusing on the future, rather
@@ -138,10 +138,10 @@ public class PApplet implements PConstants {
   static {
     String osname = System.getProperty("os.name");
 
-    if (osname.indexOf("Mac") != -1) {
+    if (osname.contains("Mac")) {
       platform = MACOSX;
 
-    } else if (osname.indexOf("Windows") != -1) {
+    } else if (osname.contains("Windows")) {
       platform = WINDOWS;
 
     } else if (osname.equals("Linux")) {  // true for the ibm vm
@@ -169,7 +169,7 @@ public class PApplet implements PConstants {
    * example, if the current screen resolution is 1024x768,
    * <b>displayWidth</b> is 1024 and <b>displayHeight</b> is 768. These
    * dimensions are useful when exporting full-screen applications.
-   * <br /><br />
+   * <br><br>
    * To ensure that the sketch takes over the entire screen, use "Present"
    * instead of "Run". Otherwise the window will still have a frame border
    * around it and not be placed in the upper corner of the screen. On Mac OS
@@ -186,7 +186,7 @@ public class PApplet implements PConstants {
    * example, if the current screen resolution is 1024x768,
    * <b>displayWidth</b> is 1024 and <b>displayHeight</b> is 768. These
    * dimensions are useful when exporting full-screen applications.
-   * <br /><br />
+   * <br><br>
    * To ensure that the sketch takes over the entire screen, use "Present"
    * instead of "Run". Otherwise the window will still have a frame border
    * around it and not be placed in the upper corner of the screen. On Mac OS
@@ -249,8 +249,8 @@ public class PApplet implements PConstants {
    * values. The <b>index</b> value defines the position of a value within
    * the array. For example, the statement <b>color b = pixels[230]</b> will
    * set the variable <b>b</b> to be equal to the value at that location in
-   * the array.<br />
-   * <br />
+   * the array.<br>
+   * <br>
    * Before accessing this array, the data must loaded with the
    * <b>loadPixels()</b> function. After the array data has been modified,
    * the <b>updatePixels()</b> function must be run to update the changes.
@@ -404,8 +404,8 @@ public class PApplet implements PConstants {
    * ( begin auto-generated from pmouseX.xml )
    *
    * The system variable <b>pmouseX</b> always contains the horizontal
-   * position of the mouse in the frame previous to the current frame.<br />
-   * <br />
+   * position of the mouse in the frame previous to the current frame.<br>
+   * <br>
    * You may find that <b>pmouseX</b> and <b>pmouseY</b> have different
    * values inside <b>draw()</b> and inside events like <b>mousePressed()</b>
    * and <b>mouseMoved()</b>. This is because they're used for different
@@ -414,8 +414,8 @@ public class PApplet implements PConstants {
    * <b>draw()</b>). But, inside mouse events, they update each time the
    * event is called. If they weren't separated, then the mouse would be read
    * only once per frame, making response choppy. If the mouse variables were
-   * always updated multiple times per frame, using <NOBR><b>line(pmouseX,
-   * pmouseY, mouseX, mouseY)</b></NOBR> inside <b>draw()</b> would have lots
+   * always updated multiple times per frame, using <b>line(pmouseX,
+   * pmouseY, mouseX, mouseY)</b> inside <b>draw()</b> would have lots
    * of gaps, because <b>pmouseX</b> may have changed several times in
    * between the calls to <b>line()</b>. Use <b>pmouseX</b> and
    * <b>pmouseY</b> inside <b>draw()</b> if you want values relative to the
@@ -554,7 +554,7 @@ public class PApplet implements PConstants {
    *
    * The system variable <b>key</b> always contains the value of the most
    * recent key on the keyboard that was used (either pressed or released).
-   * <br/> <br/>
+   * <br><br>
    * For non-ASCII keys, use the <b>keyCode</b> variable. The keys included
    * in the ASCII specification (BACKSPACE, TAB, ENTER, RETURN, ESC, and
    * DELETE) do not require checking to see if they key is coded, and you
@@ -589,7 +589,7 @@ public class PApplet implements PConstants {
    * for these keys, it's first necessary to check and see if the key is
    * coded. This is done with the conditional "if (key == CODED)" as shown in
    * the example.
-   * <br/> <br/>
+   * <br><br>
    * The keys included in the ASCII specification (BACKSPACE, TAB, ENTER,
    * RETURN, ESC, and DELETE) do not require checking to see if they key is
    * coded, and you should simply use the <b>key</b> variable instead of
@@ -597,7 +597,7 @@ public class PApplet implements PConstants {
    * ENTER key is commonly used on PCs and Unix and the RETURN key is used
    * instead on Macintosh. Check for both ENTER and RETURN to make sure your
    * program will work for all platforms.
-   * <br/> <br/>
+   * <br><br>
    * For users familiar with Java, the values for UP and DOWN are simply
    * shorter versions of Java's KeyEvent.VK_UP and KeyEvent.VK_DOWN. Other
    * keyCode values can be found in the Java <a
@@ -1289,7 +1289,7 @@ public class PApplet implements PConstants {
    * Called by the browser or applet viewer to inform this applet that it
    * should start its execution. It is called after the init method and
    * each time the applet is revisited in a Web page.
-   * <p/>
+   * <p>
    * Called explicitly via the first call to PApplet.paint(), because
    * PAppletGL needs to have a usable screen before getting things rolling.
    */
@@ -1305,7 +1305,7 @@ public class PApplet implements PConstants {
   /**
    * Called by the browser or applet viewer to inform
    * this applet that it should stop its execution.
-   * <p/>
+   * <p>
    * Unfortunately, there are no guarantees from the Java spec
    * when or if stop() will be called (i.e. on browser quit,
    * or when moving between web pages), and it's not always called.
@@ -1364,7 +1364,7 @@ public class PApplet implements PConstants {
 //   * Called by the browser or applet viewer to inform this applet
 //   * that it is being reclaimed and that it should destroy
 //   * any resources that it has allocated.
-//   * <p/>
+//   * <p>
 //   * destroy() supposedly gets called as the applet viewer
 //   * is shutting down the applet. stop() is called
 //   * first, and then destroy() to really get rid of things.
@@ -1888,6 +1888,7 @@ public class PApplet implements PConstants {
 
 
   /**
+   * @param renderer
    * @param display the screen to run the sketch on (1, 2, 3, etc. or on multiple screens using SPAN)
    */
 
@@ -1911,41 +1912,41 @@ public class PApplet implements PConstants {
    * <b>size()</b> function must be the first line in <b>setup()</b>. If
    * <b>size()</b> is not used, the default size of the window is 100x100
    * pixels. The system variables <b>width</b> and <b>height</b> are set by
-   * the parameters passed to this function.<br />
-   * <br />
+   * the parameters passed to this function.<br>
+   * <br>
    * Do not use variables as the parameters to <b>size()</b> function,
    * because it will cause problems when exporting your sketch. When
    * variables are used, the dimensions of your sketch cannot be determined
    * during export. Instead, employ numeric values in the <b>size()</b>
    * statement, and then use the built-in <b>width</b> and <b>height</b>
    * variables inside your program when the dimensions of the display window
-   * are needed.<br />
-   * <br />
+   * are needed.<br>
+   * <br>
    * The <b>size()</b> function can only be used once inside a sketch, and
    * cannot be used for resizing.<br/>
    * <br/> <b>renderer</b> parameter selects which rendering engine to use.
    * For example, if you will be drawing 3D shapes, use <b>P3D</b>, if you
    * want to export images from a program as a PDF file use <b>PDF</b>. A
-   * brief description of the three primary renderers follows:<br />
-   * <br />
+   * brief description of the three primary renderers follows:<br>
+   * <br>
    * <b>P2D</b> (Processing 2D) - The default renderer that supports two
-   * dimensional drawing.<br />
-   * <br />
+   * dimensional drawing.<br>
+   * <br>
    * <b>P3D</b> (Processing 3D) - 3D graphics renderer that makes use of
-   * OpenGL-compatible graphics hardware.<br />
-   * <br />
+   * OpenGL-compatible graphics hardware.<br>
+   * <br>
    * <b>PDF</b> - The PDF renderer draws 2D graphics directly to an Acrobat
    * PDF file. This produces excellent results when you need vector shapes
    * for high resolution output or printing. You must first use Import
    * Library &rarr; PDF to make use of the library. More information can be
-   * found in the PDF library reference.<br />
-   * <br />
+   * found in the PDF library reference.<br>
+   * <br>
    * The P3D renderer doesn't support <b>strokeCap()</b> or
    * <b>strokeJoin()</b>, which can lead to ugly results when using
    * <b>strokeWeight()</b>. (<a
    * href="http://code.google.com/p/processing/issues/detail?id=123">Issue
-   * 123</a>) <br />
-   * <br />
+   * 123</a>) <br>
+   * <br>
    * The maximum width and height is limited by your operating system, and is
    * usually the width and height of your actual screen. On some machines it
    * may simply be the number of pixels on your current screen, meaning that
@@ -1953,8 +1954,8 @@ public class PApplet implements PConstants {
    * same number of pixels. This varies widely so you'll have to try
    * different rendering modes and sizes until you get what you're looking
    * for. If you need something larger, use <b>createGraphics</b> to create a
-   * non-visible drawing surface.<br />
-   * <br />
+   * non-visible drawing surface.<br>
+   * <br>
    * Again, the <b>size()</b> function must be the first line of the code (or
    * first item inside setup). Any code that appears before the <b>size()</b>
    * command may run more than once, which can lead to confusing results.
@@ -2105,8 +2106,8 @@ public class PApplet implements PConstants {
    * P3D. Use this class if you need to draw into an off-screen graphics
    * buffer. The PDF renderer requires the filename parameter. The DXF
    * renderer should not be used with <b>createGraphics()</b>, it's only
-   * built for use with <b>beginRaw()</b> and <b>endRaw()</b>.<br />
-   * <br />
+   * built for use with <b>beginRaw()</b> and <b>endRaw()</b>.<br>
+   * <br>
    * It's important to call any drawing functions between <b>beginDraw()</b>
    * and <b>endDraw()</b> statements. This is also true for any functions
    * that affect drawing, such as <b>smooth()</b> or <b>colorMode()</b>.<br/>
@@ -2228,9 +2229,7 @@ public class PApplet implements PConstants {
     }
 
     try {
-      Class<?> rendererClass = Class.forName(renderer);
-      PGraphics pg = (PGraphics)rendererClass.newInstance();
-
+      PGraphics pg = (PGraphics)Class.forName(renderer).getDeclaredConstructor().newInstance();
       pg.setParent(this);
       pg.setPrimary(primary);
       if (path != null) {
@@ -2294,7 +2293,9 @@ public class PApplet implements PConstants {
   }
 
 
-  /** Create default renderer, likely to be resized, but needed for surface init. */
+  /** Create default renderer, likely to be resized, but needed for surface init.
+   * @return  
+   */
   protected PGraphics createPrimaryGraphics() {
     return makeGraphics(sketchWidth(), sketchHeight(),
                         sketchRenderer(), sketchOutputPath(), true);
@@ -2308,10 +2309,10 @@ public class PApplet implements PConstants {
    * fresh buffer of pixels to play with. Set the size of the buffer with the
    * <b>width</b> and <b>height</b> parameters. The <b>format</b> parameter
    * defines how the pixels are stored. See the PImage reference for more information.
-   * <br/> <br/>
+   * <br><br>
    * Be sure to include all three parameters, specifying only the width and
    * height (but no format) will produce a strange error.
-   * <br/> <br/>
+   * <br><br>
    * Advanced users please note that createImage() should be used instead of
    * the syntax <tt>new PImage()</tt>.
    *
@@ -2462,11 +2463,11 @@ public class PApplet implements PConstants {
    * the program to update the display window only when necessary, for
    * example when an event registered by <b>mousePressed()</b> or
    * <b>keyPressed()</b> occurs.
-   * <br/><br/> structuring a program, it only makes sense to call redraw()
+   * <br><br> structuring a program, it only makes sense to call redraw()
    * within events such as <b>mousePressed()</b>. This is because
    * <b>redraw()</b> does not run <b>draw()</b> immediately (it only sets a
    * flag that indicates an update is needed).
-   * <br/><br/> <b>redraw()</b> within <b>draw()</b> has no effect because
+   * <br><br> <b>redraw()</b> within <b>draw()</b> has no effect because
    * <b>draw()</b> is continuously called anyway.
    *
    * ( end auto-generated )
@@ -2520,7 +2521,7 @@ public class PApplet implements PConstants {
    * <b>draw()</b>. If <b>loop()</b> is called, the code in <b>draw()</b>
    * begin to run continuously again. If using <b>noLoop()</b> in
    * <b>setup()</b>, it should be the last line inside the block.
-   * <br/> <br/>
+   * <br><br>
    * When <b>noLoop()</b> is used, it's not possible to manipulate or access
    * the screen inside event handling functions such as <b>mousePressed()</b>
    * or <b>keyPressed()</b>. Instead, use those functions to call
@@ -2528,7 +2529,7 @@ public class PApplet implements PConstants {
    * can update the screen properly. This means that when noLoop() has been
    * called, no drawing can happen, and functions like saveFrame() or
    * loadPixels() may not be used.
-   * <br/> <br/>
+   * <br><br>
    * Note that if the sketch is resized, <b>redraw()</b> will be called to
    * update the sketch, even after <b>noLoop()</b> has been specified.
    * Otherwise, the sketch would enter an odd state until <b>loop()</b> was called.
@@ -2598,6 +2599,7 @@ public class PApplet implements PConstants {
    * Then it calls the event type with no params,
    * i.e. mousePressed() or mouseReleased() that the user may have
    * overloaded to do something more useful.
+   * @param event
    */
   protected void handleMouseEvent(MouseEvent event) {
     // http://dev.processing.org/bugs/show_bug.cgi?id=170
@@ -2962,7 +2964,7 @@ public class PApplet implements PConstants {
    *
    * The <b>keyPressed()</b> function is called once every time a key is
    * pressed. The key that was pressed is stored in the <b>key</b> variable.
-   * <br/> <br/>
+   * <br><br>
    * For non-ASCII keys, use the <b>keyCode</b> variable. The keys included
    * in the ASCII specification (BACKSPACE, TAB, ENTER, RETURN, ESC, and
    * DELETE) do not require checking to see if they key is coded, and you
@@ -2971,7 +2973,7 @@ public class PApplet implements PConstants {
    * commonly used on PCs and Unix and the RETURN key is used instead on
    * Macintosh. Check for both ENTER and RETURN to make sure your program
    * will work for all platforms.
-   * <br/> <br/>
+   * <br><br>
    * Because of how operating systems handle key repeats, holding down a key
    * may cause multiple calls to keyPressed() (and keyReleased() as well).
    * The rate of repeat is set by the operating system and how each computer
@@ -3371,25 +3373,25 @@ public class PApplet implements PConstants {
    * of an executable in the system's PATH. In most cases, using a full path
    * is the best option, rather than relying on the system PATH. Be sure to
    * make the file executable before attempting to open it (chmod +x).
-   * <br/> <br/>
+   * <br><br>
    * The <b>args</b> parameter is a String or String array which is passed to
    * the command line. If you have multiple parameters, e.g. an application
    * and a document, or a command with multiple switches, use the version
    * that takes a String array, and place each individual item in a separate
    * element.
-   * <br/> <br/>
+   * <br><br>
    * If args is a String (not an array), then it can only be a single file or
    * application with no parameters. It's not the same as executing that
    * String using a shell. For instance, launch("javac -help") will not work
    * properly.
-   * <br/> <br/>
+   * <br><br>
    * This function behaves differently on each platform. On Windows, the
    * parameters are sent to the Windows shell via "cmd /c". On Mac OS X, the
    * "open" command is used (type "man open" in Terminal.app for
    * documentation). On Linux, it first tries gnome-open, then kde-open, but
    * if neither are available, it sends the command to the shell without any
    * alterations.
-   * <br/> <br/>
+   * <br><br>
    * For users familiar with Java, this is not quite the same as
    * Runtime.exec(), because the launcher command is prepended. Instead, the
    * <b>exec(String[])</b> function is a shortcut for
@@ -3606,12 +3608,12 @@ public class PApplet implements PConstants {
    * Quits/stops/exits the program. Programs without a <b>draw()</b> function
    * exit automatically after the last line has run, but programs with
    * <b>draw()</b> run continuously until the program is manually stopped or
-   * <b>exit()</b> is run.<br />
-   * <br />
+   * <b>exit()</b> is run.<br>
+   * <br>
    * Rather than terminating immediately, <b>exit()</b> will cause the sketch
    * to exit after <b>draw()</b> has completed (or after <b>setup()</b>
-   * completes if called during the <b>setup()</b> function).<br />
-   * <br />
+   * completes if called during the <b>setup()</b> function).<br>
+   * <br>
    * For Java programmers, this is <em>not</em> the same as System.exit().
    * Further, System.exit() should not be used because closing out an
    * application while <b>draw()</b> is running may cause a crash
@@ -3693,7 +3695,7 @@ public class PApplet implements PConstants {
 
   /**
    * Call a method in the current class based on its name.
-   * <p/>
+   * <p>
    * Note that the function being called must be public. Inside the PDE,
    * 'public' is automatically added, but when used without the preprocessor,
    * (like from Eclipse) you'll have to do it yourself.
@@ -3722,7 +3724,7 @@ public class PApplet implements PConstants {
    * Launch a new thread and call the specified function from that new thread.
    * This is a very simple way to do a thread without needing to get into
    * classes, runnables, etc.
-   * <p/>
+   * <p>
    * Note that the function being called must be public. Inside the PDE,
    * 'public' is automatically added, but when used without the preprocessor,
    * (like from Eclipse) you'll have to do it yourself.
@@ -3804,8 +3806,8 @@ public class PApplet implements PConstants {
    * sequences can be loaded into programs such as Apple's QuickTime software
    * and made into movies. These files are saved to the sketch's folder,
    * which may be opened by selecting "Show sketch folder" from the "Sketch"
-   * menu.<br />
-   * <br />
+   * menu.<br>
+   * <br>
    * It is not possible to use saveXxxxx() functions inside a web browser
    * unless the sketch is <a
    * href="http://wiki.processing.org/w/Sign_an_Applet">signed applet</A>. To
@@ -3889,7 +3891,7 @@ public class PApplet implements PConstants {
    * to load an image as the cursor if you are exporting your program for the
    * Web and not all MODES work with all Web browsers. The values for
    * parameters <b>x</b> and <b>y</b> must be less than the dimensions of the image.
-   * <br /> <br />
+   * <br> <br>
    * Setting or hiding the cursor generally does not work with "Present" mode
    * (when running full-screen).
    *
@@ -3950,15 +3952,15 @@ public class PApplet implements PConstants {
    * helpful for looking at the data a program is producing. The companion
    * function <b>println()</b> works like <b>print()</b>, but creates a new
    * line of text for each call to the function. Individual elements can be
-   * separated with quotes ("") and joined with the addition operator (+).<br />
-   * <br />
+   * separated with quotes ("") and joined with the addition operator (+).<br>
+   * <br>
    * Beginning with release 0125, to print the contents of an array, use
    * println(). There's no sensible way to do a <b>print()</b> of an array,
    * because there are too many possibilities for how to separate the data
    * (spaces, commas, etc). If you want to print an array as a single line,
    * use <b>join()</b>. With <b>join()</b>, you can choose any delimiter you
-   * like and <b>print()</b> the result.<br />
-   * <br />
+   * like and <b>print()</b> the result.<br>
+   * <br>
    * Using <b>print()</b> on an object will output <b>null</b>, a memory
    * location that may look like "@10be08," or the result of the
    * <b>toString()</b> method from the object that's being printed. Advanced
@@ -4053,7 +4055,7 @@ public class PApplet implements PConstants {
    * to this function creates a new line of output. Individual elements can
    * be separated with quotes ("") and joined with the string concatenation
    * operator (+). See <b>print()</b> for more about what to expect in the output.
-   * <br/><br/> <b>println()</b> on an array (by itself) will write the
+   * <br><br> <b>println()</b> on an array (by itself) will write the
    * contents of the array to the console. This is often helpful for looking
    * at the data a program is producing. A new line is put between each
    * element of the array. This function can only print one dimensional
@@ -4863,9 +4865,9 @@ public class PApplet implements PConstants {
    * ( begin auto-generated from norm.xml )
    *
    * Normalizes a number from another range into a value between 0 and 1.
-   * <br/> <br/>
+   * <br><br>
    * Identical to map(value, low, high, 0, 1);
-   * <br/> <br/>
+   * <br><br>
    * Numbers outside the range are not clamped to 0 and 1, because
    * out-of-range values are often intentional and useful.
    *
@@ -4888,7 +4890,7 @@ public class PApplet implements PConstants {
    * the number '25' is converted from a value in the range 0..100 into
    * a value that ranges from the left edge (0) to the right edge (width)
    * of the screen.
-   * <br/> <br/>
+   * <br><br>
    * Numbers outside the range are not clamped to 0 and 1, because
    * out-of-range values are often intentional and useful.
    *
@@ -5103,7 +5105,7 @@ public class PApplet implements PConstants {
    * succession of numbers compared to the standard <b>random()</b> function.
    * It was invented by Ken Perlin in the 1980s and been used since in
    * graphical applications to produce procedural textures, natural motion,
-   * shapes, terrains etc.<br /><br /> The main difference to the
+   * shapes, terrains etc.<br><br> The main difference to the
    * <b>random()</b> function is that Perlin noise is defined in an infinite
    * n-dimensional space where each pair of coordinates corresponds to a
    * fixed semi-random value (fixed only for the lifespan of the program).
@@ -5111,11 +5113,11 @@ public class PApplet implements PConstants {
    * compute 1D, 2D and 3D noise, depending on the number of coordinates
    * given. The noise value can be animated by moving through the noise space
    * as demonstrated in the example above. The 2nd and 3rd dimension can also
-   * be interpreted as time.<br /><br />The actual noise is structured
+   * be interpreted as time.<br><br>The actual noise is structured
    * similar to an audio signal, in respect to the function's use of
    * frequencies. Similar to the concept of harmonics in physics, perlin
    * noise is computed over several octaves which are added together for the
-   * final result. <br /><br />Another way to adjust the character of the
+   * final result. <br><br>Another way to adjust the character of the
    * resulting sequence is the scale of the input coordinates. As the
    * function works within an infinite space the value of the coordinates
    * doesn't matter as such, only the distance between successive coordinates
@@ -5227,7 +5229,7 @@ public class PApplet implements PConstants {
    * parameter. Eg. a falloff factor of 0.75 means each octave will now have
    * 75% impact (25% less) of the previous lower octave. Any value between
    * 0.0 and 1.0 is valid, however note that values greater than 0.5 might
-   * result in greater than 1.0 values returned by <b>noise()</b>.<br /><br
+   * result in greater than 1.0 values returned by <b>noise()</b>.<br><br
    * />By changing these parameters, the signal created by the <b>noise()</b>
    * function can be adapted to fit very specific needs and characteristics.
    *
@@ -5488,7 +5490,7 @@ public class PApplet implements PConstants {
    * loading the image, its width and height will be set to -1. You'll know
    * when the image has loaded properly because its width and height will be
    * greater than 0. Asynchronous image loading (particularly when
-   * downloading from a server) can dramatically improve performance.<br />
+   * downloading from a server) can dramatically improve performance.<br>
    * <br/> <b>extension</b> parameter is used to determine the image type in
    * cases where the image filename does not end with a proper extension.
    * Specify the extension as the second parameter to <b>requestImage()</b>.
@@ -6176,19 +6178,19 @@ public class PApplet implements PConstants {
    * fonts must be located in the data directory of the current sketch. To
    * create a font to use with Processing, select "Create Font..." from the
    * Tools menu. This will create a font in the format Processing requires
-   * and also adds it to the current sketch's data directory.<br />
-   * <br />
+   * and also adds it to the current sketch's data directory.<br>
+   * <br>
    * Like <b>loadImage()</b> and other functions that load data, the
    * <b>loadFont()</b> function should not be used inside <b>draw()</b>,
    * because it will slow down the sketch considerably, as the font will be
-   * re-loaded from the disk (or network) on each frame.<br />
-   * <br />
+   * re-loaded from the disk (or network) on each frame.<br>
+   * <br>
    * For most renderers, Processing displays fonts using the .vlw font
    * format, which uses images for each letter, rather than defining them
    * through vector data. When <b>hint(ENABLE_NATIVE_FONTS)</b> is used with
    * the JAVA2D renderer, the native version of a font will be used if it is
-   * installed on the user's machine.<br />
-   * <br />
+   * installed on the user's machine.<br>
+   * <br>
    * Using <b>createFont()</b> (instead of loadFont) enables vector data to
    * be used with the JAVA2D (default) renderer setting. This can be helpful
    * when many font sizes are needed, or when using any renderer based on
@@ -6248,7 +6250,7 @@ public class PApplet implements PConstants {
    * file inside the sketches "data" folder. This function is an advanced
    * feature for precise control. On most occasions you should create fonts
    * through selecting "Create Font..." from the Tools menu.
-   * <br /><br />
+   * <br><br>
    * Use the <b>PFont.list()</b> method to first determine the names for the
    * fonts recognized by the computer and are compatible with this function.
    * Because of limitations in Java, not all fonts can be used and some might
@@ -6258,12 +6260,12 @@ public class PApplet implements PConstants {
    * because other people might not have the font installed on their
    * computer. Only fonts that can legally be distributed should be included
    * with a sketch.
-   * <br /><br />
+   * <br><br>
    * The <b>size</b> parameter states the font size you want to generate. The
    * <b>smooth</b> parameter specifies if the font should be antialiased or
    * not, and the <b>charset</b> parameter is an array of chars that
    * specifies the characters to generate.
-   * <br /><br />
+   * <br><br>
    * This function creates a bitmapped version of a font in the same manner
    * as the Create Font tool. It loads a font by name, and converts it to a
    * series of images based on the size of the font. When possible, the
@@ -6765,7 +6767,7 @@ public class PApplet implements PConstants {
    * Creates a <b>BufferedReader</b> object that can be used to read files
    * line-by-line as individual <b>String</b> objects. This is the complement
    * to the <b>createWriter()</b> function.
-   * <br/> <br/>
+   * <br><br>
    * Starting with Processing release 0134, all files loaded and saved by the
    * Processing API use UTF-8 encoding. In previous releases, the default
    * encoding for your platform was used, which causes problems when files
@@ -6841,7 +6843,7 @@ public class PApplet implements PConstants {
    * to write to it. For the file to be made correctly, it should be flushed
    * and must be closed with its <b>flush()</b> and <b>close()</b> methods
    * (see above example).
-   * <br/> <br/>
+   * <br><br>
    * Starting with Processing release 0134, all files loaded and saved by the
    * Processing API use UTF-8 encoding. In previous releases, the default
    * encoding for your platform was used, which causes problems when files
@@ -6909,28 +6911,28 @@ public class PApplet implements PConstants {
    * It's useful if you want to use the facilities provided by PApplet to
    * easily open files from the data folder or from a URL, but want an
    * InputStream object so that you can use other parts of Java to take more
-   * control of how the stream is read.<br />
-   * <br />
-   * The filename passed in can be:<br />
-   * - A URL, for instance <b>openStream("http://processing.org/")</b><br />
-   * - A file in the sketch's <b>data</b> folder<br />
+   * control of how the stream is read.<br>
+   * <br>
+   * The filename passed in can be:<br>
+   * - A URL, for instance <b>openStream("http://processing.org/")</b><br>
+   * - A file in the sketch's <b>data</b> folder<br>
    * - The full path to a file to be opened locally (when running as an
-   * application)<br />
-   * <br />
+   * application)<br>
+   * <br>
    * If the requested item doesn't exist, null is returned. If not online,
    * this will also check to see if the user is asking for a file whose name
    * isn't properly capitalized. If capitalization is different, an error
    * will be printed to the console. This helps prevent issues that appear
    * when a sketch is exported to the web, where case sensitivity matters, as
    * opposed to running from inside the Processing Development Environment on
-   * Windows or Mac OS, where case sensitivity is preserved but ignored.<br />
-   * <br />
+   * Windows or Mac OS, where case sensitivity is preserved but ignored.<br>
+   * <br>
    * If the file ends with <b>.gz</b>, the stream will automatically be gzip
    * decompressed. If you don't want the automatic decompression, use the
    * related function <b>createInputRaw()</b>.
-   * <br />
-   * In earlier releases, this function was called <b>openStream()</b>.<br />
-   * <br />
+   * <br>
+   * In earlier releases, this function was called <b>openStream()</b>.<br>
+   * <br>
    *
    * ( end auto-generated )
    *
@@ -7185,8 +7187,8 @@ public class PApplet implements PConstants {
    *
    * Reads the contents of a file or url and places it in a byte array. If a
    * file is specified, it must be located in the sketch's "data"
-   * directory/folder.<br />
-   * <br />
+   * directory/folder.<br>
+   * <br>
    * The filename parameter can also be a URL to a file found online. For
    * security reasons, a Processing sketch found online can only download
    * files from the same server from which it came. Getting around this
@@ -7387,20 +7389,20 @@ public class PApplet implements PConstants {
    *
    * Reads the contents of a file or url and creates a String array of its
    * individual lines. If a file is specified, it must be located in the
-   * sketch's "data" directory/folder.<br />
-   * <br />
+   * sketch's "data" directory/folder.<br>
+   * <br>
    * The filename parameter can also be a URL to a file found online. For
    * security reasons, a Processing sketch found online can only download
    * files from the same server from which it came. Getting around this
    * restriction requires a <a
    * href="http://wiki.processing.org/w/Sign_an_Applet">signed applet</a>.
-   * <br />
+   * <br>
    * If the file is not available or an error occurs, <b>null</b> will be
    * returned and an error message will be printed to the console. The error
    * message does not halt the program, however the null value may cause a
    * NullPointerException if your code does not check whether the value
    * returned is null.
-   * <br/> <br/>
+   * <br><br>
    * Starting with Processing release 0134, all files loaded and saved by the
    * Processing API use UTF-8 encoding. In previous releases, the default
    * encoding for your platform was used, which causes problems when files
@@ -7504,16 +7506,16 @@ public class PApplet implements PConstants {
    * Similar to <b>createInput()</b>, this creates a Java <b>OutputStream</b>
    * for a given filename or path. The file will be created in the sketch
    * folder, or in the same folder as an exported application.
-   * <br /><br />
+   * <br><br>
    * If the path does not exist, intermediate folders will be created. If an
    * exception occurs, it will be printed to the console, and <b>null</b>
    * will be returned.
-   * <br /><br />
+   * <br><br>
    * This function is a convenience over the Java approach that requires you
    * to 1) create a FileOutputStream object, 2) determine the exact file
    * location, and 3) handle exceptions. Exceptions are handled internally by
    * the function, which is more appropriate for "sketch" projects.
-   * <br /><br />
+   * <br><br>
    * If the output filename ends with <b>.gz</b>, the output will be
    * automatically GZIP compressed as it is written.
    *
@@ -7551,8 +7553,8 @@ public class PApplet implements PConstants {
    *
    * Save the contents of a stream to a file in the sketch folder. This is
    * basically <b>saveBytes(blah, loadBytes())</b>, but done more efficiently
-   * (and with less confusing syntax).<br />
-   * <br />
+   * (and with less confusing syntax).<br>
+   * <br>
    * When using the <b>targetFile</b> parameter, it writes to a <b>File</b>
    * object for greater control over the file location. (Note that unlike
    * some other functions, this will not automatically compress or uncompress
@@ -7572,7 +7574,7 @@ public class PApplet implements PConstants {
   /**
    * Identical to the other saveStream(), but writes to a File
    * object, for greater control over the file location.
-   * <p/>
+   * <p>
    * Note that unlike other api methods, this will not automatically
    * compress or uncompress gzip files.
    */
@@ -7648,8 +7650,8 @@ public class PApplet implements PConstants {
    * Opposite of <b>loadBytes()</b>, will write an entire array of bytes to a
    * file. The data is saved in binary format. This file is saved to the
    * sketch's folder, which is opened by selecting "Show sketch folder" from
-   * the "Sketch" menu.<br />
-   * <br />
+   * the "Sketch" menu.<br>
+   * <br>
    * It is not possible to use saveXxxxx() functions inside a web browser
    * unless the sketch is <a
    * href="http://wiki.processing.org/w/Sign_an_Applet">signed applet</A>. To
@@ -7756,8 +7758,8 @@ public class PApplet implements PConstants {
    *
    * Writes an array of strings to a file, one line per string. This file is
    * saved to the sketch's folder, which is opened by selecting "Show sketch
-   * folder" from the "Sketch" menu.<br />
-   * <br />
+   * folder" from the "Sketch" menu.<br>
+   * <br>
    * It is not possible to use saveXxxxx() functions inside a web browser
    * unless the sketch is <a
    * href="http://wiki.processing.org/w/Sign_an_Applet">signed applet</A>. To
@@ -7855,11 +7857,11 @@ public class PApplet implements PConstants {
    * Prepend the sketch folder path to the filename (or path) that is
    * passed in. External libraries should use this function to save to
    * the sketch folder.
-   * <p/>
+   * <p>
    * Note that when running as an applet inside a web browser,
    * the sketchPath will be set to null, because security restrictions
    * prevent applets from accessing that information.
-   * <p/>
+   * <p>
    * This will also cause an error if the sketch is not inited properly,
    * meaning that init() was never called on the PApplet when hosted
    * my some other main() or by other code. For proper use of init(),
@@ -7888,7 +7890,7 @@ public class PApplet implements PConstants {
   /**
    * Returns a path inside the applet folder to save to. Like sketchPath(),
    * but creates any in-between folders so that things save properly.
-   * <p/>
+   * <p>
    * All saveXxxx() functions use the path to the sketch folder, rather than
    * its data folder. Once exported, the data folder will be found inside the
    * jar file of the exported application or applet. In this case, it's not
@@ -8240,7 +8242,7 @@ public class PApplet implements PConstants {
    * Increases the size of an array. By default, this function doubles the
    * size of the array, but the optional <b>newSize</b> parameter provides
    * precise control over the increase in size.
-   * <br/> <br/>
+   * <br><br>
    * When using an array of objects, the data returned from the function must
    * be cast to the object array's data type. For example: <em>SomeClass[]
    * items = (SomeClass[]) expand(originalArray)</em>.
@@ -8360,7 +8362,7 @@ public class PApplet implements PConstants {
    * Expands an array by one element and adds data to the new position. The
    * datatype of the <b>element</b> parameter must be the same as the
    * datatype of the array.
-   * <br/> <br/>
+   * <br><br>
    * When using an array of objects, the data returned from the function must
    * be cast to the object array's data type. For example: <em>SomeClass[]
    * items = (SomeClass[]) append(originalArray, element)</em>.
@@ -8415,7 +8417,7 @@ public class PApplet implements PConstants {
    * ( begin auto-generated from shorten.xml )
    *
    * Decreases an array by one element and returns the shortened array.
-   * <br/> <br/>
+   * <br><br>
    * When using an array of objects, the data returned from the function must
    * be cast to the object array's data type. For example: <em>SomeClass[]
    * items = (SomeClass[]) shorten(originalArray)</em>.
@@ -8464,7 +8466,7 @@ public class PApplet implements PConstants {
    * parameters must be of the same datatype. The <b>array</b> parameter
    * defines the array which will be modified and the second parameter
    * defines the data which will be inserted.
-   * <br/> <br/>
+   * <br><br>
    * When using an array of objects, the data returned from the function must
    * be cast to the object array's data type. For example: <em>SomeClass[]
    * items = (SomeClass[]) splice(array1, array2, index)</em>.
@@ -8634,7 +8636,7 @@ public class PApplet implements PConstants {
    * from the <b>offset</b> to the end of the array. When specifying the
    * <b>offset</b> remember the first array element is 0. This function does
    * not change the source array.
-   * <br/> <br/>
+   * <br><br>
    * When using an array of objects, the data returned from the function must
    * be cast to the object array's data type. For example: <em>SomeClass[]
    * items = (SomeClass[]) subset(originalArray, 0, 4)</em>.
@@ -8724,7 +8726,7 @@ public class PApplet implements PConstants {
    * Concatenates two arrays. For example, concatenating the array { 1, 2, 3
    * } and the array { 4, 5, 6 } yields { 1, 2, 3, 4, 5, 6 }. Both parameters
    * must be arrays of the same datatype.
-   * <br/> <br/>
+   * <br><br>
    * When using an array of objects, the data returned from the function must
    * be cast to the object array's data type. For example: <em>SomeClass[]
    * items = (SomeClass[]) concat(array1, array2)</em>.
@@ -8953,7 +8955,7 @@ public class PApplet implements PConstants {
    * The splitTokens() function splits a String at one or many character
    * "tokens." The <b>tokens</b> parameter specifies the character or
    * characters to be used as a boundary.
-   * <br/> <br/>
+   * <br><br>
    * If no <b>tokens</b> character is specified, any whitespace character is
    * used to split. Whitespace characters include tab (\\t), line feed (\\n),
    * carriage return (\\r), form feed (\\f), and space. To convert a String
@@ -8987,15 +8989,15 @@ public class PApplet implements PConstants {
    * string as the divider. The <b>delim</b> parameter specifies the
    * character or characters that mark the boundaries between each piece. A
    * String[] array is returned that contains each of the pieces.
-   * <br/> <br/>
+   * <br><br>
    * If the result is a set of numbers, you can convert the String[] array to
    * to a float[] or int[] array using the datatype conversion functions
    * <b>int()</b> and <b>float()</b> (see example above).
-   * <br/> <br/>
+   * <br><br>
    * The <b>splitTokens()</b> function works in a similar fashion, except
    * that it splits using a range of characters instead of a specific
    * character or sequence.
-   * <!-- /><br />
+   * <!-- /><br>
    * This function uses regular expressions to determine how the <b>delim</b>
    * parameter divides the <b>str</b> parameter. Therefore, if you use
    * characters such parentheses and brackets that are used with regular
@@ -9100,8 +9102,8 @@ public class PApplet implements PConstants {
    * text, and return matching groups (elements found inside parentheses) as
    * a String array. No match will return null. If no groups are specified in
    * the regexp, but the sequence matches, an array of length one (with the
-   * matched text as the first element of the array) will be returned.<br />
-   * <br />
+   * matched text as the first element of the array) will be returned.<br>
+   * <br>
    * To use the function, first check to see if the result is null. If the
    * result is null, then the sequence did not match. If the sequence did
    * match, an array is returned.
@@ -9109,8 +9111,8 @@ public class PApplet implements PConstants {
    * then the contents of each will be returned in the array.
    * Element [0] of a regexp match returns the entire matching string, and
    * the match groups start at element [1] (the first group is [1], the
-   * second [2], and so on).<br />
-   * <br />
+   * second [2], and so on).<br>
+   * <br>
    * The syntax can be found in the reference for Java's <a
    * href="http://download.oracle.com/javase/6/docs/api/">Pattern</a> class.
    * For regular expression syntax, read the <a
@@ -9150,8 +9152,8 @@ public class PApplet implements PConstants {
    * as a two-dimensional String array. No matches will return null. If no
    * groups are specified in the regexp, but the sequence matches, a two
    * dimensional array is still returned, but the second dimension is only of
-   * length one.<br />
-   * <br />
+   * length one.<br>
+   * <br>
    * To use the function, first check to see if the result is null. If the
    * result is null, then the sequence did not match at all. If the sequence
    * did match, a 2D array is returned. If there are groups (specified by
@@ -9160,8 +9162,8 @@ public class PApplet implements PConstants {
    * Assuming, a loop with counter variable i, element [i][0] of a regexp
    * match returns the entire matching string, and the match groups start at
    * element [i][1] (the first group is [i][1], the second [i][2], and so
-   * on).<br />
-   * <br />
+   * on).<br>
+   * <br>
    * The syntax can be found in the reference for Java's <a
    * href="http://download.oracle.com/javase/6/docs/api/">Pattern</a> class.
    * For regular expression syntax, read the <a
@@ -9736,7 +9738,7 @@ public class PApplet implements PConstants {
    * Utility function for formatting numbers into strings. There are two
    * versions, one for formatting floats and one for formatting ints. The
    * values for the <b>digits</b>, <b>left</b>, and <b>right</b> parameters
-   * should always be positive integers.<br /><br />As shown in the above
+   * should always be positive integers.<br><br>As shown in the above
    * example, <b>nf()</b> is used to add zeros to the left and/or right of a
    * number. This is typically for aligning a list of numbers. To
    * <em>remove</em> digits from a floating-point number, use the
@@ -9786,7 +9788,7 @@ public class PApplet implements PConstants {
    * appropriate commas to mark units of 1000. There are two versions, one
    * for formatting ints and one for formatting an array of ints. The value
    * for the <b>digits</b> parameter should always be a positive integer.
-   * <br/><br/>
+   * <br><br>
    * For a non-US locale, this will insert periods instead of commas, or
    * whatever is apprioriate for that region.
    *
@@ -10026,7 +10028,7 @@ public class PApplet implements PConstants {
    * equivalent hexadecimal notation. For example color(0, 102, 153) will
    * convert to the String "FF006699". This function can help make your geeky
    * debugging sessions much happier.
-   * <br/> <br/>
+   * <br><br>
    * Note that the maximum number of digits is 8, because an int value can
    * only represent up to 32 bits. Specifying more than eight digits will
    * simply shorten the string to eight anyway.
@@ -10127,7 +10129,7 @@ public class PApplet implements PConstants {
    * equivalent binary notation. For example color(0, 102, 153, 255) will
    * convert to the String "11111111000000000110011010011001". This function
    * can help make your geeky debugging sessions much happier.
-   * <br/> <br/>
+   * <br><br>
    * Note that the maximum number of digits is 32, because an int value can
    * only represent up to 32 bits. Specifying more than 32 digits will simply
    * shorten the string to 32 anyway.
@@ -10666,7 +10668,7 @@ public class PApplet implements PConstants {
       } catch (RuntimeException re) {
         // Don't re-package runtime exceptions
         throw re;
-      } catch (Exception e) {
+      } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
         // Package non-runtime exceptions so we can throw them freely
         throw new RuntimeException(e);
       }
@@ -10930,7 +10932,7 @@ public class PApplet implements PConstants {
    * requires two parameters, the first is the renderer and the second is the
    * file name. This function is always used with <b>endRecord()</b> to stop
    * the recording process and close the file.
-   * <br /> <br />
+   * <br> <br>
    * Note that beginRecord() will only pick up any settings that happen after
    * it has been called. For instance, if you call textFont() before
    * beginRecord(), then that font will not be set for the file that you're
@@ -10991,21 +10993,21 @@ public class PApplet implements PConstants {
    * hundreds of triangles, rather than a single object. Or that a
    * multi-segment line shape (such as a curve) will be rendered as
    * individual segments.
-   * <br /><br />
+   * <br><br>
    * When using <b>beginRaw()</b> and <b>endRaw()</b>, it's possible to write
    * to either a 2D or 3D renderer. For instance, <b>beginRaw()</b> with the
    * PDF library will write the geometry as flattened triangles and lines,
    * even if recording from the <b>P3D</b> renderer.
-   * <br /><br />
+   * <br><br>
    * If you want a background to show up in your files, use <b>rect(0, 0,
    * width, height)</b> after setting the <b>fill()</b> to the background
    * color. Otherwise the background will not be rendered to the file because
    * the background is not shape.
-   * <br /><br />
+   * <br><br>
    * Using <b>hint(ENABLE_DEPTH_SORT)</b> can improve the appearance of 3D
    * geometry drawn to 2D file formats. See the <b>hint()</b> reference for
    * more details.
-   * <br /><br />
+   * <br><br>
    * See examples in the reference for the <b>PDF</b> and <b>DXF</b>
    * libraries for more information.
    *
@@ -11076,7 +11078,7 @@ public class PApplet implements PConstants {
    * Loads the pixel data for the display window into the <b>pixels[]</b>
    * array. This function must always be called before reading from or
    * writing to <b>pixels[]</b>.
-   * <br/><br/> renderers may or may not seem to require <b>loadPixels()</b>
+   * <br><br> renderers may or may not seem to require <b>loadPixels()</b>
    * or <b>updatePixels()</b>. However, the rule is that any time you want to
    * manipulate the <b>pixels[]</b> array, you must first call
    * <b>loadPixels()</b>, and after changes have been made, call
@@ -11106,14 +11108,14 @@ public class PApplet implements PConstants {
    * Use in conjunction with <b>loadPixels()</b>. If you're only reading
    * pixels from the array, there's no need to call <b>updatePixels()</b>
    * unless there are changes.
-   * <br/><br/> renderers may or may not seem to require <b>loadPixels()</b>
+   * <br><br> renderers may or may not seem to require <b>loadPixels()</b>
    * or <b>updatePixels()</b>. However, the rule is that any time you want to
    * manipulate the <b>pixels[]</b> array, you must first call
    * <b>loadPixels()</b>, and after changes have been made, call
    * <b>updatePixels()</b>. Even if the renderer may not seem to use this
    * function in the current Processing release, this will always be subject
    * to change.
-   * <br/> <br/>
+   * <br><br>
    * Currently, none of the renderers use the additional parameters to
    * <b>updatePixels()</b>, however this may be implemented in the future.
    *
@@ -11195,12 +11197,12 @@ public class PApplet implements PConstants {
    * specifies a position in 2D and the <b>vertex()</b> function with three
    * parameters specifies a position in 3D. Each shape will be outlined with
    * the current stroke color and filled with the fill color.
-   * <br/> <br/>
+   * <br><br>
    * Transformations such as <b>translate()</b>, <b>rotate()</b>, and
    * <b>scale()</b> do not work within <b>beginShape()</b>. It is also not
    * possible to use other shapes, such as <b>ellipse()</b> or <b>rect()</b>
    * within <b>beginShape()</b>.
-   * <br/> <br/>
+   * <br><br>
    * The P3D renderer settings allow <b>stroke()</b> and <b>fill()</b>
    * settings to be altered per-vertex, however the default P2D renderer does
    * not. Settings such as <b>strokeWeight()</b>, <b>strokeCap()</b>, and
@@ -11340,7 +11342,7 @@ public class PApplet implements PConstants {
    * Sets a texture to be applied to vertex points. The <b>texture()</b>
    * function must be called between <b>beginShape()</b> and
    * <b>endShape()</b> and before any calls to <b>vertex()</b>.
-   * <br/> <br/>
+   * <br><br>
    * When textures are in use, the fill color is ignored. Instead, use tint()
    * to specify the color of the texture as it is applied to the shape.
    *
@@ -11405,11 +11407,11 @@ public class PApplet implements PConstants {
    * All shapes are constructed by connecting a series of vertices.
    * <b>vertex()</b> is used to specify the vertex coordinates for points,
    * lines, triangles, quads, and polygons and is used exclusively within the
-   * <b>beginShape()</b> and <b>endShape()</b> function.<br />
-   * <br />
+   * <b>beginShape()</b> and <b>endShape()</b> function.<br>
+   * <br>
    * Drawing a vertex in 3D using the <b>z</b> parameter requires the P3D
-   * parameter in combination with size as shown in the above example.<br />
-   * <br />
+   * parameter in combination with size as shown in the above example.<br>
+   * <br>
    * This function is also used to map a texture onto the geometry. The
    * <b>texture()</b> function declares the texture to apply to the geometry
    * and the <b>u</b> and <b>v</b> coordinates set define the mapping of this
@@ -12516,8 +12518,8 @@ public class PApplet implements PConstants {
    * <b>image()</b> to set the location of one corner of the image and uses
    * the fourth and fifth parameters to set the opposite corner. Use
    * <b>imageMode(CENTER)</b> to draw images centered at the given x and y
-   * position.<br />
-   * <br />
+   * position.<br>
+   * <br>
    * The parameter to <b>imageMode()</b> must be written in ALL CAPS because
    * Processing is a case-sensitive language.
    *
@@ -12546,13 +12548,13 @@ public class PApplet implements PConstants {
    * <b>x</b> and <b>y</b> parameters define the location of the image from
    * its upper-left corner. The image is displayed at its original size
    * unless the <b>width</b> and <b>height</b> parameters specify a different
-   * size.<br />
-   * <br />
+   * size.<br>
+   * <br>
    * The <b>imageMode()</b> function changes the way the parameters work. For
    * example, a call to <b>imageMode(CORNERS)</b> will change the
    * <b>width</b> and <b>height</b> parameters to define the x and y values
-   * of the opposite corner of the image.<br />
-   * <br />
+   * of the opposite corner of the image.<br>
+   * <br>
    * The color of an image may be modified with the <b>tint()</b> function.
    * This function will maintain transparency for GIF and PNG images.
    *
@@ -12653,7 +12655,7 @@ public class PApplet implements PConstants {
    * to <b>shapeMode(CORNERS)</b>, for example, will change the width and
    * height parameters to define the x and y values of the opposite corner of
    * the shape.
-   * <br /><br />
+   * <br><br>
    * Note complex shapes may draw awkwardly with P3D. This renderer does not
    * yet support shapes that have holes or complicated breaks.
    *
@@ -12700,7 +12702,7 @@ public class PApplet implements PConstants {
    * CENTER, and RIGHT set the display characteristics of the letters in
    * relation to the values for the <b>x</b> and <b>y</b> parameters of the
    * <b>text()</b> function.
-   * <br/> <br/>
+   * <br><br>
    * In Processing 0125 and later, an optional second parameter can be used
    * to vertically align the text. BASELINE is the default, and the vertical
    * alignment will be reset to BASELINE if the second parameter is not used.
@@ -12708,12 +12710,12 @@ public class PApplet implements PConstants {
    * offsets the line based on the current <b>textDescent()</b>. For multiple
    * lines, the final line will be aligned to the bottom, with the previous
    * lines appearing above it.
-   * <br/> <br/>
+   * <br><br>
    * When using <b>text()</b> with width and height parameters, BASELINE is
    * ignored, and treated as TOP. (Otherwise, text would by default draw
    * outside the box, since BASELINE is the default setting. BASELINE is not
    * a useful drawing mode for text drawn in a rectangle.)
-   * <br/> <br/>
+   * <br><br>
    * The vertical alignment is based on the value of <b>textAscent()</b>,
    * which many fonts do not specify correctly. It may be necessary to use a
    * hack and offset by a few pixels by hand so that the offset looks
@@ -12784,10 +12786,10 @@ public class PApplet implements PConstants {
    * <b>text()</b> function. If no <b>size</b> parameter is input, the font
    * will appear at its original size (the size it was created at with the
    * "Create Font..." tool) until it is changed with <b>textSize()</b>. <br
-   * /> <br /> Because fonts are usually bitmaped, you should create fonts at
+   * /> <br> Because fonts are usually bitmaped, you should create fonts at
    * the sizes that will be used most commonly. Using <b>textFont()</b>
    * without the size parameter will result in the cleanest-looking text. <br
-   * /><br /> With the default (JAVA2D) and PDF renderers, it's also possible
+   * /><br> With the default (JAVA2D) and PDF renderers, it's also possible
    * to enable the use of native fonts via the command
    * <b>hint(ENABLE_NATIVE_FONTS)</b>. This will produce vector text in
    * JAVA2D sketches and PDF output in cases where the vector data is
@@ -12846,16 +12848,16 @@ public class PApplet implements PConstants {
    *
    * Sets the way text draws to the screen. In the default configuration, the
    * <b>MODEL</b> mode, it's possible to rotate, scale, and place letters in
-   * two and three dimensional space.<br />
-   * <br />
+   * two and three dimensional space.<br>
+   * <br>
    * The <b>SHAPE</b> mode draws text using the the glyph outlines of
    * individual characters rather than as textures. This mode is only
    * supported with the <b>PDF</b> and <b>P3D</b> renderer settings. With the
    * <b>PDF</b> renderer, you must call <b>textMode(SHAPE)</b> before any
    * other drawing occurs. If the outlines are not available, then
    * <b>textMode(SHAPE)</b> will be ignored and <b>textMode(MODEL)</b> will
-   * be used instead.<br />
-   * <br />
+   * be used instead.<br>
+   * <br>
    * The <b>textMode(SHAPE)</b> option in <b>P3D</b> can be combined with
    * <b>beginRaw()</b> to write vector-accurate text to 2D and 3D output
    * files, for instance <b>DXF</b> or <b>PDF</b>. The <b>SHAPE</b> mode is
@@ -12947,7 +12949,7 @@ public class PApplet implements PConstants {
    * with the <b>fill()</b> function. The text displays in relation to the
    * <b>textAlign()</b> function, which gives the option to draw to the left,
    * right, and center of the coordinates.
-   * <br /><br />
+   * <br><br>
    * The <b>x2</b> and <b>y2</b> parameters define a rectangular area to
    * display within and may only be used with string data. For text drawn
    * inside a rectangle, the coordinates are interpreted based on the current
@@ -13189,7 +13191,7 @@ public class PApplet implements PConstants {
    * Rotates a shape the amount specified by the <b>angle</b> parameter.
    * Angles should be specified in radians (values from 0 to TWO_PI) or
    * converted to radians with the <b>radians()</b> function.
-   * <br/> <br/>
+   * <br><br>
    * Objects are always rotated around their relative position to the origin
    * and positive numbers rotate objects in a clockwise direction.
    * Transformations apply to everything that happens after and subsequent
@@ -13197,7 +13199,7 @@ public class PApplet implements PConstants {
    * <b>rotate(HALF_PI)</b> and then <b>rotate(HALF_PI)</b> is the same as
    * <b>rotate(PI)</b>. All tranformations are reset when <b>draw()</b>
    * begins again.
-   * <br/> <br/>
+   * <br><br>
    * Technically, <b>rotate()</b> multiplies the current transformation
    * matrix by a rotation matrix. This function can be further controlled by
    * the <b>pushMatrix()</b> and <b>popMatrix()</b>.
@@ -13408,7 +13410,7 @@ public class PApplet implements PConstants {
    * <b>shearX(PI/2)</b> and then <b>shearX(PI/2)</b> is the same as
    * <b>shearX(PI)</b>. If <b>shearX()</b> is called within the
    * <b>draw()</b>, the transformation is reset when the loop begins again.
-   * <br/> <br/>
+   * <br><br>
    * Technically, <b>shearX()</b> multiplies the current transformation
    * matrix by a rotation matrix. This function can be further controlled by
    * the <b>pushMatrix()</b> and <b>popMatrix()</b> functions.
@@ -13443,7 +13445,7 @@ public class PApplet implements PConstants {
    * <b>shearY(PI/2)</b> and then <b>shearY(PI/2)</b> is the same as
    * <b>shearY(PI)</b>. If <b>shearY()</b> is called within the
    * <b>draw()</b>, the transformation is reset when the loop begins again.
-   * <br/> <br/>
+   * <br><br>
    * Technically, <b>shearY()</b> multiplies the current transformation
    * matrix by a rotation matrix. This function can be further controlled by
    * the <b>pushMatrix()</b> and <b>popMatrix()</b> functions.
@@ -13632,14 +13634,14 @@ public class PApplet implements PConstants {
    * The <b>beginCamera()</b> and <b>endCamera()</b> functions enable
    * advanced customization of the camera space. The functions are useful if
    * you want to more control over camera movement, however for most users,
-   * the <b>camera()</b> function will be sufficient.<br /><br />The camera
+   * the <b>camera()</b> function will be sufficient.<br><br>The camera
    * functions will replace any transformations (such as <b>rotate()</b> or
    * <b>translate()</b>) that occur before them in <b>draw()</b>, but they
    * will not automatically replace the camera transform itself. For this
    * reason, camera functions should be placed at the beginning of
    * <b>draw()</b> (so that transformations happen afterwards), and the
    * <b>camera()</b> function can be used after <b>beginCamera()</b> if you
-   * want to reset the camera before applying transformations.<br /><br
+   * want to reset the camera before applying transformations.<br><br
    * />This function sets the matrix mode to the camera matrix so calls such
    * as <b>translate()</b>, <b>rotate()</b>, applyMatrix() and resetMatrix()
    * affect the camera. <b>beginCamera()</b> should always be used with a
@@ -13953,7 +13955,7 @@ public class PApplet implements PConstants {
    * transformations (scale, rotate, translate, etc.) The X value can be used
    * to place an object in space relative to the location of the original
    * point once the transformations are no longer in use.
-   * <br/> <br/>
+   * <br><br>
    * In the example, the <b>modelX()</b>, <b>modelY()</b>, and
    * <b>modelZ()</b> functions record the location of a box in space after
    * being placed using a series of translate and rotate commands. After
@@ -13982,8 +13984,8 @@ public class PApplet implements PConstants {
    * returns the Y value for a given coordinate based on the current set of
    * transformations (scale, rotate, translate, etc.) The Y value can be used
    * to place an object in space relative to the location of the original
-   * point once the transformations are no longer in use.<br />
-   * <br />
+   * point once the transformations are no longer in use.<br>
+   * <br>
    * In the example, the <b>modelX()</b>, <b>modelY()</b>, and
    * <b>modelZ()</b> functions record the location of a box in space after
    * being placed using a series of translate and rotate commands. After
@@ -14012,8 +14014,8 @@ public class PApplet implements PConstants {
    * returns the Z value for a given coordinate based on the current set of
    * transformations (scale, rotate, translate, etc.) The Z value can be used
    * to place an object in space relative to the location of the original
-   * point once the transformations are no longer in use.<br />
-   * <br />
+   * point once the transformations are no longer in use.<br>
+   * <br>
    * In the example, the <b>modelX()</b>, <b>modelY()</b>, and
    * <b>modelZ()</b> functions record the location of a box in space after
    * being placed using a series of translate and rotate commands. After
@@ -14045,7 +14047,7 @@ public class PApplet implements PConstants {
    * <b>pushStyle()</b>, it builds on the current style information. The
    * <b>pushStyle()</b> and <b>popStyle()</b> functions can be embedded to
    * provide more control (see the second example above for a demonstration.)
-   * <br /><br />
+   * <br><br>
    * The style information controlled by the following functions are included
    * in the style:
    * fill(), stroke(), tint(), strokeWeight(), strokeCap(), strokeJoin(),
@@ -14097,7 +14099,7 @@ public class PApplet implements PConstants {
    *
    * Sets the width of the stroke used for lines, points, and the border
    * around shapes. All widths are set in units of pixels.
-   * <br/> <br/>
+   * <br><br>
    * When drawing with P3D, series of connected lines (such as the stroke
    * around a polygon, triangle, or ellipse) produce unattractive results
    * when a thick stroke weight is set (<a
@@ -14128,7 +14130,7 @@ public class PApplet implements PConstants {
    * are either mitered, beveled, or rounded and specified with the
    * corresponding parameters MITER, BEVEL, and ROUND. The default joint is
    * MITER.
-   * <br/> <br/>
+   * <br><br>
    * This function is not available with the P3D renderer, (<a
    * href="http://code.google.com/p/processing/issues/detail?id=123">see
    * Issue 123</a>). More information about the renderers can be found in the
@@ -14154,7 +14156,7 @@ public class PApplet implements PConstants {
    * Sets the style for rendering line endings. These ends are either
    * squared, extended, or rounded and specified with the corresponding
    * parameters SQUARE, PROJECT, and ROUND. The default cap is ROUND.
-   * <br/> <br/>
+   * <br><br>
    * This function is not available with the P3D renderer (<a
    * href="http://code.google.com/p/processing/issues/detail?id=123">see
    * Issue 123</a>). More information about the renderers can be found in the
@@ -14201,7 +14203,7 @@ public class PApplet implements PConstants {
    * is either specified in terms of the RGB or HSB color depending on the
    * current <b>colorMode()</b> (the default color space is RGB, with each
    * value in the range from 0 to 255).
-   * <br/> <br/>
+   * <br><br>
    * When using hexadecimal notation to specify a color, use "#" or "0x"
    * before the values (e.g. #CCFFAA, 0xFFCCFFAA). The # syntax uses six
    * digits to specify a color (the way colors are specified in HTML and
@@ -14209,7 +14211,7 @@ public class PApplet implements PConstants {
    * hexadecimal value must be specified with eight characters; the first two
    * characters define the alpha component and the remainder the red, green,
    * and blue components.
-   * <br/> <br/>
+   * <br><br>
    * The value for the parameter "gray" must be less than or equal to the
    * current maximum value as specified by <b>colorMode()</b>. The default
    * maximum value is 255.
@@ -14298,25 +14300,25 @@ public class PApplet implements PConstants {
    * ( begin auto-generated from tint.xml )
    *
    * Sets the fill value for displaying images. Images can be tinted to
-   * specified colors or made transparent by setting the alpha.<br />
-   * <br />
+   * specified colors or made transparent by setting the alpha.<br>
+   * <br>
    * To make an image transparent, but not change it's color, use white as
    * the tint color and specify an alpha value. For instance, tint(255, 128)
    * will make an image 50% transparent (unless <b>colorMode()</b> has been
-   * used).<br />
-   * <br />
+   * used).<br>
+   * <br>
    * When using hexadecimal notation to specify a color, use "#" or "0x"
    * before the values (e.g. #CCFFAA, 0xFFCCFFAA). The # syntax uses six
    * digits to specify a color (the way colors are specified in HTML and
    * CSS). When using the hexadecimal notation starting with "0x", the
    * hexadecimal value must be specified with eight characters; the first two
    * characters define the alpha component and the remainder the red, green,
-   * and blue components.<br />
-   * <br />
+   * and blue components.<br>
+   * <br>
    * The value for the parameter "gray" must be less than or equal to the
    * current maximum value as specified by <b>colorMode()</b>. The default
-   * maximum value is 255.<br />
-   * <br />
+   * maximum value is 255.<br>
+   * <br>
    * The <b>tint()</b> function is also used to control the coloring of
    * textures in 3D.
    *
@@ -14403,7 +14405,7 @@ public class PApplet implements PConstants {
    * color is either specified in terms of the RGB or HSB color depending on
    * the current <b>colorMode()</b> (the default color space is RGB, with
    * each value in the range from 0 to 255).
-   * <br/> <br/>
+   * <br><br>
    * When using hexadecimal notation to specify a color, use "#" or "0x"
    * before the values (e.g. #CCFFAA, 0xFFCCFFAA). The # syntax uses six
    * digits to specify a color (the way colors are specified in HTML and
@@ -14411,11 +14413,11 @@ public class PApplet implements PConstants {
    * hexadecimal value must be specified with eight characters; the first two
    * characters define the alpha component and the remainder the red, green,
    * and blue components.
-   * <br/> <br/>
+   * <br><br>
    * The value for the parameter "gray" must be less than or equal to the
    * current maximum value as specified by <b>colorMode()</b>. The default
    * maximum value is 255.
-   * <br/> <br/>
+   * <br><br>
    * To change the color of an image (or a texture), use tint().
    *
    * ( end auto-generated )
@@ -14840,9 +14842,9 @@ public class PApplet implements PConstants {
    *
    * Sets the falloff rates for point lights, spot lights, and ambient
    * lights. The parameters are used to determine the falloff with the
-   * following equation:<br /><br />d = distance from light position to
-   * vertex position<br />falloff = 1 / (CONSTANT + d * LINEAR + (d*d) *
-   * QUADRATIC)<br /><br />Like <b>fill()</b>, it affects only the elements
+   * following equation:<br><br>d = distance from light position to
+   * vertex position<br>falloff = 1 / (CONSTANT + d * LINEAR + (d*d) *
+   * QUADRATIC)<br><br>Like <b>fill()</b>, it affects only the elements
    * which are created after it in the code. The default value if
    * <b>LightFalloff(1.0, 0.0, 0.0)</b>. Thinking about an ambient light with
    * a falloff can be tricky. It is used, for example, if you wanted a region
@@ -14907,13 +14909,13 @@ public class PApplet implements PConstants {
    * of the Processing window. The default background is light gray. In the
    * <b>draw()</b> function, the background color is used to clear the
    * display window at the beginning of each frame.
-   * <br/> <br/>
+   * <br><br>
    * An image can also be used as the background for a sketch, however its
    * width and height must be the same size as the sketch window. To resize
    * an image 'b' to the size of the sketch window, use b.resize(width, height).
-   * <br/> <br/>
+   * <br><br>
    * Images used as background will ignore the current <b>tint()</b> setting.
-   * <br/> <br/>
+   * <br><br>
    * It is not possible to use transparency (alpha) in background colors with
    * the main drawing surface, however they will work properly with <b>createGraphics()</b>.
    *
@@ -15096,12 +15098,12 @@ public class PApplet implements PConstants {
    *
    * Extracts the red value from a color, scaled to match current
    * <b>colorMode()</b>. This value is always returned as a  float so be
-   * careful not to assign it to an int value.<br /><br />The red() function
+   * careful not to assign it to an int value.<br><br>The red() function
    * is easy to use and undestand, but is slower than another technique. To
    * achieve the same results when working in <b>colorMode(RGB, 255)</b>, but
    * with greater speed, use the &gt;&gt; (right shift) operator with a bit
    * mask. For example, the following two lines of code are equivalent:<br
-   * /><pre>float r1 = red(myColor);<br />float r2 = myColor &gt;&gt; 16
+   * /><pre>float r1 = red(myColor);<br>float r2 = myColor &gt;&gt; 16
    * &amp; 0xFF;</pre>
    *
    * ( end auto-generated )
@@ -15127,12 +15129,12 @@ public class PApplet implements PConstants {
    *
    * Extracts the green value from a color, scaled to match current
    * <b>colorMode()</b>. This value is always returned as a  float so be
-   * careful not to assign it to an int value.<br /><br />The <b>green()</b>
+   * careful not to assign it to an int value.<br><br>The <b>green()</b>
    * function is easy to use and undestand, but is slower than another
    * technique. To achieve the same results when working in <b>colorMode(RGB,
    * 255)</b>, but with greater speed, use the &gt;&gt; (right shift)
    * operator with a bit mask. For example, the following two lines of code
-   * are equivalent:<br /><pre>float r1 = green(myColor);<br />float r2 =
+   * are equivalent:<br><pre>float r1 = green(myColor);<br>float r2 =
    * myColor &gt;&gt; 8 &amp; 0xFF;</pre>
    *
    * ( end auto-generated )
@@ -15158,12 +15160,12 @@ public class PApplet implements PConstants {
    *
    * Extracts the blue value from a color, scaled to match current
    * <b>colorMode()</b>. This value is always returned as a  float so be
-   * careful not to assign it to an int value.<br /><br />The <b>blue()</b>
+   * careful not to assign it to an int value.<br><br>The <b>blue()</b>
    * function is easy to use and undestand, but is slower than another
    * technique. To achieve the same results when working in <b>colorMode(RGB,
    * 255)</b>, but with greater speed, use a bit mask to remove the other
    * color components. For example, the following two lines of code are
-   * equivalent:<br /><pre>float r1 = blue(myColor);<br />float r2 = myColor
+   * equivalent:<br><pre>float r1 = blue(myColor);<br>float r2 = myColor
    * &amp; 0xFF;</pre>
    *
    * ( end auto-generated )
@@ -15314,14 +15316,14 @@ public class PApplet implements PConstants {
    * the display window by specifying an additional <b>width</b> and
    * <b>height</b> parameter. When getting an image, the <b>x</b> and
    * <b>y</b> parameters define the coordinates for the upper-left corner of
-   * the image, regardless of the current <b>imageMode()</b>.<br />
-   * <br />
+   * the image, regardless of the current <b>imageMode()</b>.<br>
+   * <br>
    * If the pixel requested is outside of the image window, black is
    * returned. The numbers returned are scaled according to the current color
    * ranges, but only RGB values are returned by this function. For example,
    * even though you may have drawn a shape with <b>colorMode(HSB)</b>, the
-   * numbers returned will be in RGB format.<br />
-   * <br />
+   * numbers returned will be in RGB format.<br>
+   * <br>
    * Getting the color of a single pixel with <b>get(x, y)</b> is easy, but
    * not as fast as grabbing the data directly from <b>pixels[]</b>. The
    * equivalent statement to <b>get(x, y)</b> using <b>pixels[]</b> is
@@ -15388,15 +15390,15 @@ public class PApplet implements PConstants {
    * ( begin auto-generated from PImage_set.xml )
    *
    * Changes the color of any pixel or writes an image directly into the
-   * display window.<br />
-   * <br />
+   * display window.<br>
+   * <br>
    * The <b>x</b> and <b>y</b> parameters specify the pixel to change and the
    * <b>color</b> parameter specifies the color value. The color parameter is
    * affected by the current color mode (the default is RGB values from 0 to
    * 255). When setting an image, the <b>x</b> and <b>y</b> parameters define
    * the coordinates for the upper-left corner of the image, regardless of
    * the current <b>imageMode()</b>.
-   * <br /><br />
+   * <br><br>
    * Setting the color of a single pixel with <b>set(x, y)</b> is easy, but
    * not as fast as putting the data directly into <b>pixels[]</b>. The
    * equivalent statement to <b>set(x, y, #000000)</b> using <b>pixels[]</b>
@@ -15441,8 +15443,8 @@ public class PApplet implements PConstants {
    * Masks part of an image from displaying by loading another image and
    * using it as an alpha channel. This mask image should only contain
    * grayscale data, but only the blue color channel is used. The mask image
-   * needs to be the same size as the image to which it is applied.<br />
-   * <br />
+   * needs to be the same size as the image to which it is applied.<br>
+   * <br>
    * In addition to using a mask image, an integer array containing the alpha
    * channel data can be specified directly. This method is useful for
    * creating dynamically generated alpha masks. This array must be of the
@@ -15485,28 +15487,28 @@ public class PApplet implements PConstants {
   /**
    * ( begin auto-generated from PImage_filter.xml )
    *
-   * Filters an image as defined by one of the following modes:<br /><br
+   * Filters an image as defined by one of the following modes:<br><br
    * />THRESHOLD - converts the image to black and white pixels depending if
    * they are above or below the threshold defined by the level parameter.
    * The level must be between 0.0 (black) and 1.0(white). If no level is
-   * specified, 0.5 is used.<br />
-   * <br />
-   * GRAY - converts any colors in the image to grayscale equivalents<br />
-   * <br />
-   * INVERT - sets each pixel to its inverse value<br />
-   * <br />
+   * specified, 0.5 is used.<br>
+   * <br>
+   * GRAY - converts any colors in the image to grayscale equivalents<br>
+   * <br>
+   * INVERT - sets each pixel to its inverse value<br>
+   * <br>
    * POSTERIZE - limits each channel of the image to the number of colors
-   * specified as the level parameter<br />
-   * <br />
+   * specified as the level parameter<br>
+   * <br>
    * BLUR - executes a Guassian blur with the level parameter specifying the
    * extent of the blurring. If no level parameter is used, the blur is
-   * equivalent to Guassian blur of radius 1<br />
-   * <br />
-   * OPAQUE - sets the alpha channel to entirely opaque<br />
-   * <br />
+   * equivalent to Guassian blur of radius 1<br>
+   * <br>
+   * OPAQUE - sets the alpha channel to entirely opaque<br>
+   * <br>
    * ERODE - reduces the light areas with the amount defined by the level
-   * parameter<br />
-   * <br />
+   * parameter<br>
+   * <br>
    * DILATE - increases the light areas with the amount defined by the level parameter
    *
    * ( end auto-generated )
@@ -15525,7 +15527,7 @@ public class PApplet implements PConstants {
    * </UL>
    * Luminance conversion code contributed by
    * <A HREF="http://www.toxi.co.uk">toxi</A>
-   * <P/>
+   * <p>
    * Gaussian blur code contributed by
    * <A HREF="http://incubator.quasimondo.com">Mario Klingemann</A>
    *
@@ -15549,7 +15551,7 @@ public class PApplet implements PConstants {
    * source pixels to fit the specified target region. No alpha information
    * is used in the process, however if the source image has an alpha channel
    * set, it will be copied as well.
-   * <br /><br />
+   * <br><br>
    * As of release 0149, this function ignores <b>imageMode()</b>.
    *
    * ( end auto-generated )
@@ -15599,47 +15601,47 @@ public class PApplet implements PConstants {
    * Blends a region of pixels into the image specified by the <b>img</b>
    * parameter. These copies utilize full alpha channel support and a choice
    * of the following modes to blend the colors of source pixels (A) with the
-   * ones of pixels in the destination image (B):<br />
-   * <br />
-   * BLEND - linear interpolation of colours: C = A*factor + B<br />
-   * <br />
-   * ADD - additive blending with white clip: C = min(A*factor + B, 255)<br />
-   * <br />
+   * ones of pixels in the destination image (B):<br>
+   * <br>
+   * BLEND - linear interpolation of colours: C = A*factor + B<br>
+   * <br>
+   * ADD - additive blending with white clip: C = min(A*factor + B, 255)<br>
+   * <br>
    * SUBTRACT - subtractive blending with black clip: C = max(B - A*factor,
-   * 0)<br />
-   * <br />
-   * DARKEST - only the darkest colour succeeds: C = min(A*factor, B)<br />
-   * <br />
-   * LIGHTEST - only the lightest colour succeeds: C = max(A*factor, B)<br />
-   * <br />
-   * DIFFERENCE - subtract colors from underlying image.<br />
-   * <br />
-   * EXCLUSION - similar to DIFFERENCE, but less extreme.<br />
-   * <br />
-   * MULTIPLY - Multiply the colors, result will always be darker.<br />
-   * <br />
-   * SCREEN - Opposite multiply, uses inverse values of the colors.<br />
-   * <br />
+   * 0)<br>
+   * <br>
+   * DARKEST - only the darkest colour succeeds: C = min(A*factor, B)<br>
+   * <br>
+   * LIGHTEST - only the lightest colour succeeds: C = max(A*factor, B)<br>
+   * <br>
+   * DIFFERENCE - subtract colors from underlying image.<br>
+   * <br>
+   * EXCLUSION - similar to DIFFERENCE, but less extreme.<br>
+   * <br>
+   * MULTIPLY - Multiply the colors, result will always be darker.<br>
+   * <br>
+   * SCREEN - Opposite multiply, uses inverse values of the colors.<br>
+   * <br>
    * OVERLAY - A mix of MULTIPLY and SCREEN. Multiplies dark values,
-   * and screens light values.<br />
-   * <br />
-   * HARD_LIGHT - SCREEN when greater than 50% gray, MULTIPLY when lower.<br />
-   * <br />
+   * and screens light values.<br>
+   * <br>
+   * HARD_LIGHT - SCREEN when greater than 50% gray, MULTIPLY when lower.<br>
+   * <br>
    * SOFT_LIGHT - Mix of DARKEST and LIGHTEST.
-   * Works like OVERLAY, but not as harsh.<br />
-   * <br />
+   * Works like OVERLAY, but not as harsh.<br>
+   * <br>
    * DODGE - Lightens light tones and increases contrast, ignores darks.
-   * Called "Color Dodge" in Illustrator and Photoshop.<br />
-   * <br />
+   * Called "Color Dodge" in Illustrator and Photoshop.<br>
+   * <br>
    * BURN - Darker areas are applied, increasing contrast, ignores lights.
-   * Called "Color Burn" in Illustrator and Photoshop.<br />
-   * <br />
+   * Called "Color Burn" in Illustrator and Photoshop.<br>
+   * <br>
    * All modes use the alpha information (highest byte) of source image
    * pixels as the blending factor. If the source and destination regions are
    * different sizes, the image will be automatically resized to match the
    * destination size. If the <b>srcImg</b> parameter is not used, the
-   * display window is used as the source image.<br />
-   * <br />
+   * display window is used as the source image.<br>
+   * <br>
    * As of release 0149, this function ignores <b>imageMode()</b>.
    *
    * ( end auto-generated )
